Fix header spacing on non tabbed hole pages
Very similar to the previous commit, we don't want to pad the header
unless there's an icon there which only happens on the tabbed hole page.

--- a/css/base.css
+++ b/css/base.css
@@ -458,11 +458,6 @@ body > .tabs a {
 details.tabs   { display: initial }
 details.tabs a { display: inline-block }
 
-#alert-pool {
-    flex: 1;
-    margin-right: 0.5em;
-}
-
 #error h1 { text-align: center }
 
 #ideas, #index { grid-template-columns: repeat(auto-fit, minmax(230px, 1fr)) }
